Updated all the files
1. Renamed dockerimage-name-lowercase-task.yaml file to utilities-task.yaml
2. Updated all the reference to point in in pipeline files
3. Updated utilities-task.yaml to generated 2 new scripts, one for getting insecure regitries from cluster resource and update container registries.conf content and second script to fetch if any additional_trusted_ca are configured in cluster resource and use the certs value from configmap to prepare certs file in /etc/docker/certs.d location

--- a/docker/kabanero-utils/Dockerfile
+++ b/docker/kabanero-utils/Dockerfile
@@ -1,12 +1,6 @@
-FROM registry.access.redhat.com/ubi8:latest
+FROM appsody/appsody-buildah:0.5.8-buildah1.9.0
 
-# Create repo file for yum to pull kubectl from
-RUN echo "[kubernetes]" > /etc/yum.repos.d/kubernetes.repo
-RUN echo "baseurl=https://packages.cloud.google.com/yum/repos/kubernetes-el7-x86_64" >> /etc/yum.repos.d/kubernetes.repo
-RUN echo "enabled=1"  >> /etc/yum.repos.d/kubernetes.repo
-RUN echo "gpgcheck=1" >> /etc/yum.repos.d/kubernetes.repo
-RUN echo "repo_gpgcheck=1" >> /etc/yum.repos.d/kubernetes.repo
-RUN echo "gpgkey=https://packages.cloud.google.com/yum/doc/yum-key.gpg https://packages.cloud.google.com/yum/doc/rpm-package-key.gpg" >> /etc/yum.repos.d/kubernetes.repo
-
-# Install kubectl
-RUN yum install -y kubectl
+#Running the kubectl installation script in above base image
+COPY /install_kubectl_fedora.sh /root/
+RUN chmod +x /root/install_kubectl_fedora.sh
+RUN /root/install_kubectl_fedora.sh
