updated the script name and reference in Dockerfile
updated the script name and reference in Dockerfile

--- a/docker/kabanero-utils/Dockerfile
+++ b/docker/kabanero-utils/Dockerfile
@@ -1,6 +1,6 @@
 FROM appsody/appsody-buildah:0.5.8-buildah1.9.0
 
 #Running the kubectl installation script in above base image
-COPY /install_kubectl_fedora.sh /root/
-RUN chmod +x /root/install_kubectl_fedora.sh
-RUN /root/install_kubectl_fedora.sh
+COPY /install_utilities.sh /root/
+RUN chmod +x /root/install_utilities.sh
+RUN /root/install_utilities.sh
