--- a/pipelines/incubator/image-scan-task.yaml
+++ b/pipelines/incubator/image-scan-task.yaml
@@ -32,7 +32,7 @@ spec:
     - name: mount-image          
       securityContext:
         privileged: true
-      image: appsody/appsody-buildah:0.5.0-buildah1.9.0
+      image: kabanero/kabanero-utils:0.8.0
 # Temporarily make copy of mounted image since the mounted image will be unmounted when the container for this task ends.
 # TODO: Determine another way to persist the mounted container image across containers
       command: ['/bin/bash']
