--- a/pipelines/incubator/build-push-task.yaml
+++ b/pipelines/incubator/build-push-task.yaml
@@ -15,7 +15,7 @@ spec:
     - name: git-source
       type: git
   steps:
-  - name: build
+  - name: enforce-stack-policy-pre-build
     securityContext:
       privileged: true
     image: kabanero/kabanero-utils:0.8.0
@@ -23,22 +23,44 @@ spec:
     args:
       - -c
       - |
-        #executing the insecure_registry_setup.sh script if exists, to add internal registry to insecure registry list
-        if [ -f "/workspace/$gitsource/insecure_registry_setup.sh" ]; then
-           echo "Running the script /workspace/$gitsource/insecure_registry_setup.sh ...."
-           /workspace/$gitsource/insecure_registry_setup.sh
-           echo "printing the content /etc/containers/registries.conf"
-           cat /etc/containers/registries.conf
-        fi
-
-        #executing the ca_certs_setup.sh script if exists, to add additional trusted ca certs to /etc/docker/certs.d/<hosname>/ca.crt
-        if [ -f "/workspace/$gitsource/ca_certs_setup.sh" ]; then
-           echo "Running the script /workspace/$gitsource/ca_certs_setup.sh ...."
-           /workspace/$gitsource/ca_certs_setup.sh
-           echo "printing the content /etc/docker/certs.d/"
-           ls -ltr /etc/docker/certs.d/
-        fi
+        /workspace/$gitsource/enforce_stack_policy.sh
         
+    env:
+    - name: gitsource
+      value: git-source
+    - name: DEFAULT_STACK_IMAGE_REGISTRY_URL
+      valueFrom:
+        configMapKeyRef:
+         name: stack-image-registry-map
+         key: default-stack-image-registry-url
+         optional: true
+    - name: DEFAULT_STACK_IMAGE_REGISTRY_SECRET_USERNAME
+      valueFrom:
+        secretKeyRef:
+          name: default-stack-image-registry-secret
+          key: username
+          optional: true
+    - name: DEFAULT_STACK_IMAGE_REGISTRY_SECRET_PASSWORD
+      valueFrom:
+        secretKeyRef:
+          name: default-stack-image-registry-secret
+          key: password
+          optional: true
+    volumeMounts:
+    - mountPath: /var/lib/containers
+      name: varlibcontainers
+    - name: config-volume
+      mountPath: /config
+    - name: secret-volume
+      mountPath: /etc/secret-volume        
+  - name: build
+    securityContext:
+      privileged: true
+    image: appsody/appsody-buildah:0.5.8-buildah1.9.0
+    command: ["/bin/bash"]
+    args:
+      - -c
+      - |
         echo "Configmap value for DEFAULT_STACK_IMAGE_REGISTRY_URL=$DEFAULT_STACK_IMAGE_REGISTRY_URL"
 
         if [ -z "$DEFAULT_STACK_IMAGE_REGISTRY_URL" ]
@@ -79,14 +101,35 @@ spec:
             STACK_IMAGE_REGISTRY_URL=$DEFAULT_STACK_IMAGE_REGISTRY_URL
         fi
         
-        echo  "Looking for stack registry at $STACK_IMAGE_REGISTRY_URL"
+        echo "Looking for stack registry at $STACK_IMAGE_REGISTRY_URL."
 
         if [[ ( -z "$DEFAULT_STACK_IMAGE_REGISTRY_SECRET_USERNAME" ) || ( -z "$DEFAULT_STACK_IMAGE_REGISTRY_SECRET_PASSWORD" ) ]]
         then
             echo "DEFAULT_STACK_IMAGE_REGISTRY_SECRET_USERNAME or DEFAULT_STACK_IMAGE_REGISTRY_SECRET_PASSWORD is empty.  Assumption is authentication to the registry is not required."
+
+            if [[ "$STACK_IMAGE_REGISTRY_URL" == *"$internal_stack_registry_string"*  ]];then
+               echo "Creating the certificate for STACK_IMAGE_REGISTRY_URL=$STACK_IMAGE_REGISTRY_URL"
+               #Creating a cert for the internal image registry url
+               echo "The STACK_IMAGE_REGISTRY_URL is internal registry =$STACK_IMAGE_REGISTRY_URL"
+               echo "HOST=$STACK_IMAGE_REGISTRY_URL" > cert-creation.sh
+               echo "sudo mkdir -p /etc/docker/certs.d/\${HOST}" >> cert-creation.sh
+               echo "openssl s_client -connect \${HOST} -servername \${HOST} 2>/dev/null </dev/null | sed -ne '/-BEGIN CERTIFICATE-/,/-END CERTIFICATE-/p' | sudo tee -a /etc/docker/certs.d/\${HOST}/ca.crt" >> cert-creation.sh
+
+               chmod 755 cert-creation.sh
+               ./cert-creation.sh
+            fi
         else
             echo "Secrets are provided to login to stack registry"
+            echo "Creating the certificate for STACK_IMAGE_REGISTRY_URL=$STACK_IMAGE_REGISTRY_URL"
+            #Creating a cert for authentication of buildah login of the DEFAULT_STACK_IMAGE_REGISTRY_URL registry url
+            echo "HOST=$STACK_IMAGE_REGISTRY_URL" > cert-creation.sh
+            echo "sudo mkdir -p /etc/docker/certs.d/\${HOST}" >> cert-creation.sh
+            echo "openssl s_client -connect \${HOST} -servername \${HOST} 2>/dev/null </dev/null | sed -ne '/-BEGIN CERTIFICATE-/,/-END CERTIFICATE-/p' | sudo tee -a /etc/docker/certs.d/\${HOST}/ca.crt" >> cert-creation.sh
             echo "buildah login -u $DEFAULT_STACK_IMAGE_REGISTRY_SECRET_USERNAME -p $DEFAULT_STACK_IMAGE_REGISTRY_SECRET_PASSWORD \${HOST}" >> cert-creation.sh
+            
+            echo "Creating certificates and logging into the registry."
+            chmod 755 cert-creation.sh
+            ./cert-creation.sh
         fi
 
         cd /workspace/$gitsource
@@ -104,6 +147,46 @@ spec:
         appsody build -t "$OUTPUTS_RESOURCE_DOCKER_IMAGE_URL_LOWERCASE" --buildah --buildah-options "--format=docker" --stack-registry "$STACK_IMAGE_REGISTRY_URL"
         echo "Copying the generated app-deploy.yaml file from input to the output to pass the file to the next task when this task is used in deploy pipeline"
         cp app-deploy.yaml $(outputs.resources.git-source.path)
+    env:
+    - name: gitsource
+      value: git-source
+    - name: internal_stack_registry_string
+      value: image-registry.openshift-image-registry.svc:5000
+    - name: DEFAULT_STACK_IMAGE_REGISTRY_URL
+      valueFrom:
+        configMapKeyRef:
+         name: stack-image-registry-map
+         key: default-stack-image-registry-url
+         optional: true
+    - name: DEFAULT_STACK_IMAGE_REGISTRY_SECRET_USERNAME
+      valueFrom:
+        secretKeyRef:
+          name: default-stack-image-registry-secret
+          key: username
+          optional: true
+    - name: DEFAULT_STACK_IMAGE_REGISTRY_SECRET_PASSWORD
+      valueFrom:
+        secretKeyRef:
+          name: default-stack-image-registry-secret
+          key: password
+          optional: true
+    volumeMounts:
+    - mountPath: /var/lib/containers
+      name: varlibcontainers
+    - name: config-volume
+      mountPath: /config
+    - name: secret-volume
+      mountPath: /etc/secret-volume
+  - name: enforce-stack-policy-post-build
+    securityContext:
+      privileged: true
+    image: kabanero/kabanero-utils:0.8.0
+    command: ["/bin/bash"]
+    args:
+      - -c
+      - |
+        /workspace/$gitsource/enforce_stack_policy.sh
+        
     env:
     - name: gitsource
       value: git-source
@@ -131,11 +214,11 @@ spec:
     - name: config-volume
       mountPath: /config
     - name: secret-volume
-      mountPath: /etc/secret-volume
+      mountPath: /etc/secret-volume       
   - name: push
     securityContext:
       privileged: true
-    image: kabanero/kabanero-utils:0.8.0
+    image: appsody/appsody-buildah:0.5.8-buildah1.9.0
     command: ["/bin/bash"]
     args:
       - -c
@@ -149,20 +232,8 @@ spec:
            exit $retVal
         fi
         echo "OUTPUTS_RESOURCE_DOCKER_IMAGE_URL_LOWERCASE=$OUTPUTS_RESOURCE_DOCKER_IMAGE_URL_LOWERCASE"
-
-        #executing the insecure_registry_setup.sh script if exists, to add internal registry to insecure registry list
-        if [ -f "/workspace/$gitsource/insecure_registry_setup.sh" ]; then
-           echo "Running the script /workspace/$gitsource/insecure_registry_setup.sh ...."
-           /workspace/$gitsource/insecure_registry_setup.sh
-        fi
-
-        #executing the ca_certs_setup.sh script if exists, to add additional trusted ca certs to /etc/docker/certs.d/<hosname>/ca.crt
-        if [ -f "/workspace/$gitsource/ca_certs_setup.sh" ]; then
-           echo "Running the script /workspace/$gitsource/ca_certs_setup.sh ...."
-           /workspace/$gitsource/ca_certs_setup.sh
-        fi
-
-        buildah push --tls-verify=true "$OUTPUTS_RESOURCE_DOCKER_IMAGE_URL_LOWERCASE" "docker://$OUTPUTS_RESOURCE_DOCKER_IMAGE_URL_LOWERCASE"
+  
+        buildah push --tls-verify=false "$OUTPUTS_RESOURCE_DOCKER_IMAGE_URL_LOWERCASE" "docker://$OUTPUTS_RESOURCE_DOCKER_IMAGE_URL_LOWERCASE"
     env:
     - name: gitsource
       value: git-source
@@ -180,4 +251,3 @@ spec:
     secret:
       secretName: default-stack-image-registry-secret
       optional: true
-
