updated the name of the step name

--- a/pipelines/incubator/utilities-task.yaml
+++ b/pipelines/incubator/utilities-task.yaml
@@ -22,7 +22,7 @@ spec:
     - name: git-source
       type: git
   steps:
-  - name: insecure-registry-setup
+  - name: registry-connection-setup
     securityContext:
       privileged: true
     image: kabanero/kabanero-utils:0.8.0
