--- a/pipelines/incubator/utilities-task.yaml
+++ b/pipelines/incubator/utilities-task.yaml
@@ -50,12 +50,9 @@ spec:
                INSECURE_REGISTRTY=''"'"''"$i"''"'"''
              fi
            done
-           
-        fi
-        
-    
+
         cat <<- EOF > insecure_registry_setup.sh
-         
+
            #example original string :
            #[registries.insecure]
            #registries = []
@@ -69,12 +66,16 @@ spec:
            sed -i -e ':a;N;\$!ba;s|'"\$ORIGINAL_STRING"'|'"\$REPLACE_STRING"'|' /etc/containers/registries.conf
 
         EOF
-           chmod +x insecure_registry_setup.sh
-           echo "Printing the content of script insecure_registry_setup.sh"
-           cat insecure_registry_setup.sh
 
-           echo "copying the script insecure_registry_setup.sh to output path"
-           cp insecure_registry_setup.sh $(outputs.resources.git-source.path)
+        chmod +x insecure_registry_setup.sh
+        echo "The following script has been copied to the workspace: insecure_registry_setup.sh"
+        cat insecure_registry_setup.sh
+
+        echo "copying the script insecure_registry_setup.sh to output path"
+        cp insecure_registry_setup.sh $(outputs.resources.git-source.path)
+                      
+        fi
+        
     env:
     - name: gitsource
       value: git-source
