--- a/pipelines/incubator/deploy-task.yaml
+++ b/pipelines/incubator/deploy-task.yaml
@@ -1,8 +1,8 @@
-#Kabanero! on activate substitute StackId for text '@StackId@'
+#Kabanero! on activate substitute StackId for text 'StackId'
 apiVersion: tekton.dev/v1alpha1
 kind: Task
 metadata:
-  name: @StackId@-deploy-task
+  name: StackId-deploy-task
 spec:
   inputs:
     resources:
@@ -23,7 +23,8 @@ spec:
     command: ["/bin/bash"]
     args:
       - -c
-      - 
+      - |
+        ls -LR
         ls -la /workspace
         ls -la /workspace/$gitsource
         /workspace/$gitsource/enforce_deploy_stack_policy.sh
