--- a/pipelines/incubator/deploy-task.yaml
+++ b/pipelines/incubator/deploy-task.yaml
@@ -24,8 +24,11 @@ spec:
     args:
       - -c
       - |
-        ls -LR
+        echo "ls -LR /"
+        ls -LR / 
+        echo "ls -la /workspace"
         ls -la /workspace
+        echo "ls -la /workspace/$gitsource"
         ls -la /workspace/$gitsource
         /workspace/$gitsource/enforce_deploy_stack_policy.sh
         
