--- a/pipelines/incubator/build-push-pl-tr.yaml
+++ b/pipelines/incubator/build-push-pl-tr.yaml
@@ -88,7 +88,7 @@ spec:
       type: image
       params:
       - name: url
-        value: $(params.webhooks-tekton-docker-registry)
+        value: $(params.webhooks-tekton-docker-registry)/$(params.docker-tag)
   - apiVersion: tekton.dev/v1alpha1
     kind: PipelineRun
     metadata:
