--- a/pipelines/experimental/eventing-pipelines/deploy-task.yaml
+++ b/pipelines/experimental/eventing-pipelines/deploy-task.yaml
@@ -1,8 +1,8 @@
-#Kabanero! on activate substitute Digest for text 'Digest'
+#Kabanero! on activate substitute @Digest@ for text 'Digest'
 apiVersion: tekton.dev/v1alpha1
 kind: Task
 metadata:
-  name: deploy-task-Digest
+  name: deploy-task-@Digest@
 spec:
   inputs:
     resources:
