--- a/pipelines/incubator/utilities-task.yaml
+++ b/pipelines/incubator/utilities-task.yaml
@@ -243,24 +243,24 @@ spec:
         #################
         # ignoreDigests #
         #################
-        ignore_digests () {
+        ignore_digest () {
         
            # If the version was "latest", sort all the installed versions to find the latest
            if [ "$VERSION" == "latest" ] && [ ! -z CLUSTER_STACK_VERSIONS ]; then
               echo 
-              echo "INFO: The application stack, "$PROJECT/$STACK_NAME:$VERSION", in $APPSODY_CONFIG is active on this cluster and passes stackPolicy validation."
+              echo "$INFO The application stack, "$PROJECT/$STACK_NAME:$VERSION", in $APPSODY_CONFIG is active on this cluster and passes stackPolicy validation."
               exit 0  
            fi
            for STACK_VERSION in ${CLUSTER_STACK_VERSIONS}; do            
               # If the stack version starts with same pattern, we are done
               if [[ "$STACK_VERSION" == $VERSION* ]]; then
                  echo 
-                 echo "INFO: The application stack, "$PROJECT/$STACK_NAME:$VERSION", in $APPSODY_CONFIG is active on this cluster and passes stackPolicy validation."
+                 echo "$INFO The application stack, "$PROJECT/$STACK_NAME:$VERSION", in $APPSODY_CONFIG is active on this cluster and passes stackPolicy validation."
                  exit 0  
               fi  
            done  
-           echo "ERROR: A compatible version of the application stack, "$PROJECT/$STACK_NAME:$VERSION", is not active on this cluster. Please review the active versions of the stack on the cluster (oc get stack $STACK_NAME -o json) and the stack specification in the $APPSODY_CONFIG file of the git project."
-           echo "ERROR: Stack fails stackPolicy validation." 
+           echo "$ERROR A compatible version of the application stack, "$PROJECT/$STACK_NAME:$VERSION", is not active on this cluster. Please review the active versions of the stack on the cluster (oc get stack $STACK_NAME -o json) and the stack specification in the $APPSODY_CONFIG file of the git project."
+           echo "$ERROR Stack fails stackPolicy validation." 
            exit 1
         }
         
@@ -268,7 +268,7 @@ spec:
         #################
         # activeDigests #
         #################
-        active_digests () {
+        active_digest () {
  
            # Find matching versions
            for STACK_VERSION in ${CLUSTER_STACK_VERSIONS}
@@ -281,15 +281,15 @@ spec:
            SORTED_CLUSTER_STACK_VERSIONS=$( echo "$CANDIDATE_STACK_VERSIONS" | tr ' ' '\n' | sort | tr '\n' ' ' )
            if [ -z "$SORTED_CLUSTER_STACK_VERSIONS" ]; then
               echo
-              echo "ERROR: $APPSODY_CONFIG specifies a stack version of $VERSION , but there are no matching versions active. Versions active: $CLUSTER_STACK_VERSIONS"
+              echo "$ERROR $APPSODY_CONFIG specifies a stack version of $VERSION , but there are no matching versions active. Versions active: $CLUSTER_STACK_VERSIONS"
               exit 1
            else
               # PATCH APPSODY-CONFIG
               LATEST=$( echo $SORTED_CLUSTER_STACK_VERSIONS | awk '{print $NF}' )
               PATCHED=${STACK//$VERSION/$LATEST}
               sed -i -e "s|$STACK|$PATCHED|g" /workspace/$GITSOURCE/$APPSODY_CONFIG
-              echo "WARN: .appsody-config.yaml, stack: value patched from '$STACK' to '$PATCHED' according to stackPolicy setting of 'activeDigest'"
-              echo "INFO: The application stack, "$PROJECT/$STACK_NAME:$VERSION", in $APPSODY_CONFIG is active on this cluster and fails stackPolcy validation."
+              echo "$WARN $APPSODY_CONFIG, stack: value patched from '$STACK' to '$PATCHED' according to stackPolicy setting of 'activeDigest'"
+              echo "$INFO The application stack, "$PROJECT/$STACK_NAME:$VERSION", in $APPSODY_CONFIG is active on this cluster and fails stackPolcy validation."
               exit 0
            fi
         }
@@ -298,20 +298,24 @@ spec:
         #################
         # strictDigests #
         #################
-        strict_digests () {
+        strict_digest () {
 
            if [ "$STACK_POLICY" == "strictDigest" ]; then
-              echo "ERROR: A compatible version of the application stack, "$PROJECT/$STACK_NAME:$VERSION", is not active on this cluster. Please review the active versions of the stack on the cluster (oc get stack $STACK_NAME -o json) and the stack specification in the $APPSODY_CONFIG file of the git project."
+              echo "$ERROR A compatible version of the application stack, "$PROJECT/$STACK_NAME:$VERSION", is not active on this cluster. Please review the active versions of the stack on the cluster (oc get stack $STACK_NAME -o json) and the stack specification in the $APPSODY_CONFIG file of the git project."
               exit 1
            else
               # TODO: Clarify message, copied
-              echo "INFO: The application stack, "$PROJECT/$STACK_NAME:$VERSION", in $APPSODY_CONFIG is active on this cluster and passes stackPolicy validation."
+              echo "$INFO The application stack, "$PROJECT/$STACK_NAME:$VERSION", in $APPSODY_CONFIG is active on this cluster and passes stackPolicy validation."
               exit 0
            fi 
         }
        
         ###  MAIN ###
        
+        # Tracing prefixes
+        INFO="[INFO]"
+        WARNING="[WARNING]"
+        ERROR="[ERROR]"
         # env var gitsource
         GITSOURCE=$gitsource
         APPSODY_CONFIG=".appsody-config.yaml"
@@ -331,16 +335,16 @@ spec:
         
         if [ "$STACK_POLICY" == "none" ]; then
            echo
-           echo "INFO: stackPolicy' under 'governancePolicy' is set to 'none', skipping stack validation."
+           echo "$INFO stackPolicy' under 'governancePolicy' is set to 'none', skipping stack validation."
            exit 0
         fi
         echo
-        echo "INFO: Enforcing 'stackPolicy' of '$STACK_POLICY'."
+        echo "$INFO Enforcing 'stackPolicy' of '$STACK_POLICY'."
         echo
 
         cd /workspace/$GITSOURCE
         if [ ! -f "$APPSODY_CONFIG" ]; then
-           echo "ERROR: $APPSODY_CONFIG is not found in the root of the source directory. Unable to do stackPolicy validation."
+           echo "$ERROR $APPSODY_CONFIG is not found in the root of the source directory. Unable to do stackPolicy validation."
            exit 1
         fi
         
@@ -349,11 +353,11 @@ spec:
         # Read project, stack image, docker host and stack name from .appsody-config.yaml
         #########################################################################################
         echo
-        echo "INFO: Read project, stack image, docker host and stack name from .appsody-config.yaml" 
+        echo "$INFO Read project, stack image, docker host and stack name from .appsody-config.yaml" 
         # Find the value for "stack:" from the appsody config file and assign it to the variable 'stack'
         declare $( awk '{if ($1 ~ "stack:"){printf "STACK="$2}}'  $APPSODY_CONFIG )
         if [ -z "$STACK" ]; then
-           echo "INFO: $APPSODY_CONFIG does not contain a stack: definition. Unable to do stackPolicy validation."
+           echo "$INFO $APPSODY_CONFIG does not contain a stack: definition. Unable to do stackPolicy validation."
            exit 1
         fi
 
@@ -364,8 +368,8 @@ spec:
 
         # For version get everything after last `:`
         VERSION="${STACK##*:}"
-        echo "INFO: Git project config in $APPSODY_CONFIG... "
-        echo "INFO: VERSION = $VERSION"
+        echo "$INFO Git project config in $APPSODY_CONFIG... "
+        echo "$INFO VERSION = $VERSION"
 
         # For project stack get everything before the last `:`
         PROJECT_STACK="${STACK%:*}"
@@ -381,9 +385,9 @@ spec:
             PROJECT="$( echo $PROJECT_STACK | cut -d'/' -f2 )"
         fi
 
-        echo "INFO: STACK_IMAGE_REGISTRY = $STACK_REGISTRY"
-        echo "INFO: PROJECT = $PROJECT"
-        echo "INFO: STACK_NAME = $STACK_NAME"
+        echo "$INFO STACK_IMAGE_REGISTRY = $STACK_REGISTRY"
+        echo "$INFO PROJECT = $PROJECT"
+        echo "$INFO STACK_NAME = $STACK_NAME"
 
         # If the host wasn't specified, default to docker.io; if only specified in appsody-cfg.yaml use that
         # If it's in the config map use that and should match with what's in appsody-cfg.yaml
@@ -399,7 +403,7 @@ spec:
                 echo "WARNING: $APPSODY_CONFIG specifies different repository, $STACK_REGISTRY, than what's configured in the config map, $IMAGE_REGISTRY_HOST, in the cluster.  Config map entry takes priority.  Using $IMAGE_REGISTRY_HOST as the default stack registry."
             fi
         fi
-        echo "INFO: Successfully read project, stack image, docker host and stack name from .appsody-config.yaml" 
+        echo "$INFO Successfully read project, stack image, docker host and stack name from .appsody-config.yaml" 
 
 
 
@@ -407,18 +411,18 @@ spec:
         # Validate stack name & project are present, active in the Kabanero CR
         #########################################################################################
         echo
-        echo "INFO: Validate stack name & project are present, active in the Kabanero CR"
+        echo "$INFO Validate stack name & project are present, active in the Kabanero CR"
         # Check to make sure the stack is active by name first
         kubectl get stack $STACK_NAME -o json > /dev/null 2>&1
         if [ $? -ne 0 ]; then
-           echo "ERROR: No versions of $STACK_NAME in $APPSODY_CONFIG are active in the cluster.  Stack fails stackPolicy validation since $STACK_NAME is not active."
-           echo "ERROR: Stack messages = $?"
+           echo "$ERROR No versions of $STACK_NAME in $APPSODY_CONFIG are active in the cluster.  Stack fails stackPolicy validation since $STACK_NAME is not active."
+           echo "$ERROR Stack messages = $?"
            exit 1
         fi
         # Check if the project names in the cfg file and active stack match
         CLUSTER_STACK_IMAGE=$( kubectl get stack $STACK_NAME  -o json | jq -r '.status.versions[].images[].image?' )
-        echo "INFO: In the cluster..."
-        echo "INFO: STACK_IMAGE = $CLUSTER_STACK_IMAGE"
+        echo "$INFO In the cluster..."
+        echo "$INFO STACK_IMAGE = $CLUSTER_STACK_IMAGE"
         # The stack name could be after the 2nd or 3rd `/` based on appsody version. Check after 3rd first
         THIRD_ENTRY="$(echo $CLUSTER_STACK_IMAGE | cut -d'/' -f3 )"
         if [ -z "$THIRD_ENTRY" ]; then
@@ -429,32 +433,32 @@ spec:
             CLUSTER_PROJECT="$( echo $CLUSTER_STACK_IMAGE | cut -d'/' -f2 )"
             CLUSTER_STACK="$(echo $CLUSTER_STACK_IMAGE | cut -d'/' -f3)"
         fi
-        echo "INFO: STACK_IMAGE_REGISTRY = $CLUSTER_STACK_REGISTRY"
-        echo "INFO: PROJECT = $CLUSTER_PROJECT"
-        echo "INFO: STACK_NAME = $CLUSTER_STACK"
+        echo "$INFO STACK_IMAGE_REGISTRY = $CLUSTER_STACK_REGISTRY"
+        echo "$INFO PROJECT = $CLUSTER_PROJECT"
+        echo "$INFO STACK_NAME = $CLUSTER_STACK"
         if [ "$CLUSTER_PROJECT" != "$PROJECT" ]; then
-            echo "ERROR: Project name, $CLUSTER_PROJECT, of active stack in cluster and project name in the stack in $APPSODY_CONFIG, $PROJECT, do not match."
-            echo "ERROR: stackPolicy validation failed."
+            echo "$ERROR Project name, $CLUSTER_PROJECT, of active stack in cluster and project name in the stack in $APPSODY_CONFIG, $PROJECT, do not match."
+            echo "$ERROR stackPolicy validation failed."
             exit 1
         fi
-        echo "INFO: Sucessfully validated stack name & project are present, active in the Kabanero CR"
+        echo "$INFO Sucessfully validated stack name & project are present, active in the Kabanero CR"
 
         #########################################################################################
         #  Main validation between operator and registry
         #########################################################################################
         # IgnoreDigests (always)  &  activeDigest (if failure for autopatch)
         CLUSTER_STACK_VERSIONS=$( kubectl get stack $STACK_NAME  -o json | jq -r '.status.versions[].version?' )
-        CLUSTER_STACK_DIGESTS=$( kubectl get stack java-microprofile -o json | jq -r '.status.versions[].images[].digest.activation?' )
+        CLUSTER_STACK_DIGESTS=$( kubectl get stack $STACK_NAME -o json | jq -r '.status.versions[].images[].digest.activation?' )
         echo
-        echo "INFO: VERSIONS = $CLUSTER_STACK_VERSIONS"
-        echo "INFO: DIGESTS  = $CLUSTER_STACK_DIGESTS"   
+        echo "$INFO VERSIONS = $CLUSTER_STACK_VERSIONS"
+        echo "$INFO DIGESTS  = $CLUSTER_STACK_DIGESTS"   
         
         if [ "$STACK_POLICY" == "ignoreDigest" ]; then
-           ignore_digests
+           ignore_digest
         fi
 
         # Get the target sha256 digest from the image registry. Use the proper credentials depending on what was passed to us
-        echo "INFO: RECONCILED_STACK_IMAGE_REGISTRY_HOST = $IMAGE_REGISTRY_HOST"
+        echo "$INFO RECONCILED_STACK_IMAGE_REGISTRY_HOST = $IMAGE_REGISTRY_HOST"
         if [ -z "$IMAGE_REGISTRY_PASSWORD" ] || [ -z "$IMAGE_REGISTRY_USERNAME" ]; then
            TARGET_DIGEST=$( skopeo inspect --tls-verify=false docker://"$IMAGE_REGISTRY_HOST"/"$PROJECT"/"$STACK_NAME":"$VERSION" | jq '.Digest' )
         else
@@ -471,27 +475,27 @@ spec:
            do              
               if [ "$TARGET_DIGEST" =  "\"sha256:$CURRENT_DIGEST\"" ]; then
                 echo 
-                echo "INFO: The application stack, "$PROJECT/$STACK_NAME:$VERSION", in $APPSODY_CONFIG is active on this cluster and passes stackPolicy validation."
+                echo "$INFO The application stack, "$PROJECT/$STACK_NAME:$VERSION", in $APPSODY_CONFIG is active on this cluster and passes stackPolicy validation."
                 exit 0
               else
                  # Not found, iterate to next and pring debug info
-                 echo "INFO: Cluster stack digest: $CURRENT_DIGEST"
-                 echo "INFO: Project stack version: $VERSION, Project stack digest: $TARGET_DIGEST"
+                 echo "$INFO Cluster stack digest: $CURRENT_DIGEST"
+                 echo "$INFO Project stack version: $VERSION, Project stack digest: $TARGET_DIGEST"
               fi
            done
         echo 
         
         
         if [ "$STACK_POLICY" == "strictDigest" ]; then
-           strict_digests
+           strict_digest
         fi   
         
         if [ "$STACK_POLICY" == "activeDigest" ]; then
-           active_digests
+           active_digest
         fi   
 
         # All early exits, we should not get here
-        echo "ERROR: stackPolicy of not $STACK_POLICY not recognized"
+        echo "$ERROR stackPolicy of not $STACK_POLICY not recognized"
         exit 1
         EOF
         
@@ -519,8 +523,99 @@ spec:
       - -c
       - |
         cat <<- "EOF" > enforce_deploy_stack_policy.sh
-        echo "WORKS!"
+        #############
+        # Functions #
+        #############
+        
+        #################
+        # ignoreDigests #
+        #################
+        ignore_digest () {
+        
+           # Retrieve the stack id/name from the application image       
+           STACK_NAME=$( skopeo inspect --tls-verify=false docker://docker.io/smcclem/scott-image:latest  | jq -r '.Labels."dev.appsody.stack.id"' ) 
+           # Retrieve the version from the application image
+           STACK_VERSION=$( skopeo inspect --tls-verify=false docker://docker.io/smcclem/scott-image:latest  | jq -r '.Labels."dev.appsody.stack.version"' ) 
+           # Retrieve all the version of the stack
+           CLUSTER_STACK_VERSIONS=$( oc get stack $STACK_NAME  -o json | jq -r '.status.versions[].version?' )
+        
+           for VERSION in ${CLUSTER_STACK_VERSIONS}; do            
+              # If the stack version starts with same pattern, we are done
+              if [[ "$VERSION" == "$STACK_VERSION" ]]; then
+                 echo "$INFO The application stack '$STACK_NAME', version: $STACK_VERSION is active and passes stackPolicy enforcement."
+                 exit 0  
+              fi  
+           done          
+        
+           echo "$ERROR The application stack '$STACK_NAME', version: $STACK_VERSION is not active and fails stackPolicy enforcement."
+           exit 0  
 
+        }
+        
+        ################################
+        # activeDigests & strictDigest #
+        ################################
+        active_strict_digest () {
+ 
+           # Retrieve the stack id/name from the application image       
+           STACK_NAME=$( skopeo inspect --tls-verify=false docker://docker.io/smcclem/scott-image:latest  | jq -r '.Labels."dev.appsody.stack.id"' ) 
+           # Retrieve the version from the application image
+           STACK_VERSION=$( skopeo inspect --tls-verify=false docker://docker.io/smcclem/scott-image:latest  | jq -r '.Labels."dev.appsody.stack.version"' ) 
+           # Retrieve the version from the application image
+           STACK_DIGEST=$( skopeo inspect --tls-verify=false docker://docker.io/smcclem/scott-image:latest  | jq -r '.Labels."dev.appsody.stack.digest"' ) 
+           # Retrieve all the digests of the stack
+           CLUSTER_STACK_DIGESTS=$( kubectl get stack $STACK_NAME -o json | jq -r '.status.versions[].images[].digest.activation?' )
+        
+           for DIGEST in ${CLUSTER_STACK_DIGESTS}; do            
+              # If the stack version starts with same pattern, we are done
+              if [[ "$DIGEST" == "$STACK_DIGEST" ]]; then
+                 echo "$INFO The application stack '$STACK_NAME', version: $STACK_VERSION is active and passes stackPolicy enforcement."
+                 exit 0  
+              fi  
+              echo "$DIGEST : $STACK_DIGEST"
+           done          
+           echo "$ERROR The application stack '$STACK_NAME', version: $STACK_VERSION is not active and fails stackPolicy enforcement."
+           exit 0  
+
+        }
+        
+        
+        #### MAIN ###
+        
+        INFO="[INFO]"
+        WARNING="[WARNING]"
+        ERROR="[ERROR]"
+         
+        # env var gitsource
+        GITSOURCE=$gitsource
+        APPSODY_CONFIG=".appsody-config.yaml"
+        IMAGE_REGISTRY_HOST=$DEFAULT_STACK_IMAGE_REGISTRY_URL
+        IMAGE_REGISTRY_USERNAME=$DEFAULT_STACK_IMAGE_REGISTRY_SECRET_USERNAME
+        IMAGE_REGISTRY_PASSWORD=$DEFAULT_STACK_IMAGE_REGISTRY_SECRET_PASSWORD
+
+        # Get stack policy
+        # Values: strictDigest, activeDigest (default if blank), ignoreDigest and none
+        # https://github.com/kabanero-io/kabanero-foundation/blob/master/design/digest.md
+
+        STACK_POLICY=$( kubectl get kabanero kabanero -o json | jq -r '.spec.governancePolicy.stackPolicy' )
+        # Default to value "activeDigest" - if the CR lacks a value, the default is to be used
+        if [ -z "$STACK_POLICY" ] || [ "$STACK_POLICY" == "null" ]; then
+           STACK_POLICY="activeDigest"
+        fi
+        if [ "$STACK_POLICY" == "none" ]; then
+           echo "$INFO stackPolicy' under 'governancePolicy' is set to 'none', skipping stackPolicy validation."
+           exit 0
+        fi
+        echo "$INFO Enforcing 'stackPolicy' of '$STACK_POLICY'."
+        if [ "$STACK_POLICY" == "strictDigest" ] || [ "$STACK_POLICY" == "activeDigest" ]; then
+           active_strict_digest
+        fi   
+        
+        if [ "$STACK_POLICY" == "ignoreDigest" ]; then
+           ignore_digest
+        fi    
+        echo "$ERROR Unrecognized stackPolicy specified: '$STACK_POLICY'."     
+        exit 1
         EOF
         
         echo "Wrote enforce_deploy_stack_policy.sh to workspace:"
