--- a/pipelines/incubator/utilities-task.yaml
+++ b/pipelines/incubator/utilities-task.yaml
@@ -537,7 +537,7 @@ spec:
            # Retrieve the version from the application image
            STACK_VERSION=$( skopeo inspect --tls-verify=false docker://docker.io/smcclem/scott-image:latest  | jq -r '.Labels."dev.appsody.stack.version"' ) 
            # Retrieve all the version of the stack
-           CLUSTER_STACK_VERSIONS=$( oc get stack $STACK_NAME  -o json | jq -r '.status.versions[].version?' )
+           CLUSTER_STACK_VERSIONS=$( kubectl get stack $STACK_NAME  -o json | jq -r '.status.versions[].version?' )
         
            for VERSION in ${CLUSTER_STACK_VERSIONS}; do            
               # If the stack version starts with same pattern, we are done
