--- a/pipelines/incubator/build-push-task.yaml
+++ b/pipelines/incubator/build-push-task.yaml
@@ -141,6 +141,7 @@ spec:
         echo "Copying the generated app-deploy.yaml file from input to the output to pass the file to the next task when this task is used in deploy pipeline"
         cp app-deploy.yaml $(outputs.resources.git-source.path)
         cp enforce_deploy_stack_policy.sh $(outputs.resources.git-source.path)
+        cp imageurl_imagename_lowercase.sh $(outputs.resources.git-source.path)
         
     env:
     - name: gitsource
