--- a/pipelines/incubator/deploy-task.yaml
+++ b/pipelines/incubator/deploy-task.yaml
@@ -24,7 +24,14 @@ spec:
     args:
       - -c
       - |
-        /workspace/$gitsource/enforce_deploy_stack_policy.sh
+        INPUTS_RESOURCE_DOCKER_IMAGE_URL_LOWERCASE=$( /workspace/$gitsource/imageurl_imagename_lowercase.sh )
+        retVal=$?
+        if [ $retVal -ne 0 ]; then
+             echo "The script failed(/workspace/$gitsource/imageurl_imagename_lowercase.sh) Reason: $INPUTS_RESOURCE_DOCKER_IMAGE_URL_LOWERCASE" >&2
+             exit $retVal
+        fi
+        echo "INPUTS_RESOURCE_DOCKER_IMAGE_URL_LOWERCASE=$INPUTS_RESOURCE_DOCKER_IMAGE_URL_LOWERCASE"
+        /workspace/$gitsource/enforce_deploy_stack_policy.sh $INPUTS_RESOURCE_DOCKER_IMAGE_URL_LOWERCASE
         
     env:  
     - name: gitsource
